Set up header and footer partials

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,3 +1,6 @@
+<%- include("partials/header") %>
+
+
 <h1>Camp Grounds</h1>
 
 <% campgrounds.forEach(function(campground, index){ %>
@@ -6,3 +9,5 @@
         <img src="<%= campground.image %>">
     </div>
 <% }); %>
+
+<%- include("partials/footer") %>
