--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,2 +1,6 @@
+<%- include("partials/header") %>
+
 <h1>Yelp Camp</h1>
 <a href="/campgrounds">View all campgrounds</a>
+
+<%- include("partials/footer") %>
