Added form page for adding new camps. POST route set up to do the same

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -3,6 +3,8 @@
 
 <h1>Camp Grounds</h1>
 
+<a href="/campground/new">Add New Campground</a>
+
 <% campgrounds.forEach(function(campground, index){ %>
     <div>
         <h4> <%= campground.name %> </h4>
