Added navbar to header partial

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,11 +1,12 @@
 <%- include("partials/header") %>
+
 <div class="container">
     <header class="jumbotron">
         <div class="container">
             <h1>Welcome to YelpCamp!</h1>
             <p>View our hand-picked campgrounds close to you</p>
             <p>
-                <a class="btn btn-primary btn-lg" href="/campground/new">Add New Campground</a>
+                <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Campground</a>
             </p>
         </div>
     </header>
