--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,3 +6,18 @@
     </head>
 
     <body>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <a class="navbar-brand" href="/">YelpCamp</a>
+              </div>
+        
+              <div class="navbar-collapse collapse">
+                  <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/">Log In</a></li>
+                    <li><a href="/">Sign Up</a></li>
+                    <li><a href="/">Logout</a></li>
+                  </ul>
+              </div>
+        </nav>
