--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,9 +16,9 @@
         
               <div class="navbar-collapse collapse">
                   <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/">Log In</a></li>
-                    <li><a href="/">Sign Up</a></li>
-                    <li><a href="/">Logout</a></li>
+                    <li><a href="/login">Log In</a></li>
+                    <li><a href="/register">Sign Up</a></li>
+                    <li><a href="/logout">Logout</a></li>
                   </ul>
               </div>
         </nav>
