--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,9 +16,13 @@
         
               <div class="navbar-collapse collapse">
                   <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/login">Log In</a></li>
-                    <li><a href="/register">Sign Up</a></li>
-                    <li><a href="/logout">Logout</a></li>
+                    <% if(!currentUser){ %>
+                      <li><a href="/login">Login</a></li>
+                      <li><a href="/register">Sign Up</a></li>
+                    <% } else { %>
+                      <li><a href="#">Signed in as <strong><%= currentUser.username %></strong></a></li>
+                      <li><a href="/logout">Logout</a></li>
+                    <% } %>
                   </ul>
               </div>
         </nav>
