--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -44,6 +44,9 @@
                             <a class='btn btn-xs btn-warning' href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">
                                 Edit
                             </a>
+                            <form style="display: inline;" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/?_method=DELETE" method="POST">
+                                <button class="btn btn-xs btn-danger">Delete</button>
+                            </form>
                         </div>
                     </div>
                 <% }) %>
