Comment edit button hidden if user not authorized.

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -21,9 +21,9 @@
                         <em>Submitted by <%= campground.author.username %></em>
                     </p>
                     <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
-                        <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                        <a class="btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                         <form style="display: inline;" id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                            <button class="btn btn-xs btn-danger">Delete</button>
+                            <button class="btn btn-danger">Delete</button>
                         </form>
                     <% }%>
                 </div>
@@ -41,12 +41,14 @@
                             <p>
                                 <%= comment.text %> 
                             </p>
-                            <a class='btn btn-xs btn-warning' href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">
-                                Edit
-                            </a>
-                            <form style="display: inline;" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/?_method=DELETE" method="POST">
-                                <button class="btn btn-xs btn-danger">Delete</button>
-                            </form>
+                            <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+                                <a class='btn btn-xs btn-warning' href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">
+                                    Edit
+                                </a>
+                                <form style="display: inline;" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/?_method=DELETE" method="POST">
+                                    <button class="btn btn-xs btn-danger">Delete</button>
+                                </form>
+                            <% }%>
                         </div>
                     </div>
                 <% }) %>
