--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -20,6 +20,10 @@
             <div class="form-group">
                 <button class="btn btn-lg btn-primary btn-block">Submit!</button>
             </div>
+            <div class="form-group">
+                <label for="location">Location</label>
+                <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
+            </div>
         </form>
         <a href="/campgrounds">Go Back</a>
     </div>
