--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -7,15 +7,15 @@
         <form action="/campgrounds" method="POST">
             <div class="form-group">
                 <label for="name">Name</label>
-                <input class="form-control" id="name" type="text" name="name" placeholder="name">
+                <input class="form-control" id="name" type="text" name="name" placeholder="Jane Doe">
             </div>
             <div class="form-group">
                 <label for="price">Price</label>
-                <input class="form-control" id="price" type="number" name="price" placeholder="price" min="0.01" step="0.01">
+                <input class="form-control" id="price" type="number" name="price" placeholder="21.50" min="0.01" step="0.01">
             </div>
             <div class="form-group">
                 <label for="image">Image Url</label>
-                <input class="form-control" id="image" type="text" name="image" placeholder="image url">
+                <input class="form-control" id="image" type="text" name="image" placeholder="https://images.unsplash.com/photo-1510312305653-8ed496efae75?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60https://pixabay.com/get/55e8dc404f5aab14f1dc84609620367d1c3ed9e04e5074417c2772d4964fc2_340">
             </div>
             <div class="form-group">
                 <label for="location">Location</label>
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label for="description">Description</label>
-                <input class="form-control" id="description" type="text" name="description" placeholder="description">
+                <input class="form-control" id="description" type="text" name="description" placeholder="Adventure for the whole family!">
             </div>
             <div class="form-group">
                 <button class="btn btn-lg btn-primary btn-block">Submit!</button>
