--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,15 +2,16 @@
 
 
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-4">
         <p class="lead">YelpCamp</p>
         <div class="list-group">
             <li class="list-group-item active">Info 1</li>
             <li class="list-group-item">Info 2</li>
             <li class="list-group-item">Info 3</li>
         </div>
+        <div id="map"></div>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <div class="thumbnail">
             <img class="img-responsive" src="<%= campground.image %>">
             <div class="caption-full">
@@ -56,6 +57,33 @@
     </div>
 </div>
 
-
+<script>
+    function initMap() {
+      var lat = <%= campground.lat %>;
+      var lng = <%= campground.lng %>;
+      var center = {lat: lat, lng: lng };
+      var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 8,
+          center: center,
+          scrollwheel: false
+      });
+      var contentString = `
+        <strong><%= campground.name %><br />
+        <%= campground.location %></strong>
+        <p><%= campground.description %></p>
+      `
+      var infowindow = new google.maps.InfoWindow({
+        content: contentString
+      });
+      var marker = new google.maps.Marker({
+          position: center,
+          map: map
+      });
+      marker.addListener('click', function() {
+        infowindow.open(map, marker);
+      });
+    }
+  </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5-wRNpcp3EvdVLmUPPJ9VmPEzXXYn4z8&callback=initMap"></script>
 
 <%- include("../partials/footer") %>
