--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -7,7 +7,7 @@
         <form action="/campgrounds" method="POST">
             <div class="form-group">
                 <label for="name">Name</label>
-                <input class="form-control" id="name" type="text" name="name" placeholder="Jane Doe">
+                <input class="form-control" id="name" type="text" name="name" placeholder="Misty Meadows">
             </div>
             <div class="form-group">
                 <label for="price">Price</label>
