--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,8 +21,11 @@
                   <span class="icon-bar"></span>
                 </button>
               </div>
-        
+              
               <div class="collapse navbar-collapse" id="navbar">
+                  <!-- <ul class="nav navbar-nav">
+                    <li><a href="/campgrounds">Home</a></li>
+                  </ul> -->
                   <ul class="nav navbar-nav navbar-right">
                     <% if(!currentUser){ %>
                       <li><a href="/login">Login</a></li>
