--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,7 +3,7 @@
 
 <header class="jumbotron">
     <div class="container">
-        <h1>Welcome to YelpCamp!</h1>
+        <h1><span class="glyphicon glyphicon-tent" aria-hidden="true"></span> Welcome to YelpCamp!</h1>
         <p>View our hand-picked campgrounds close to you</p>
         <p>
             <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Campground</a>
